corrected a labelling error

--- a/main.tex
+++ b/main.tex
@@ -234,7 +234,7 @@ Introducing the notation
 Equation \ref{chain} becomes
 \begin{equation}
 	\frac{\partial E}{\partial w_{ij}} = \delta_j \frac{\partial a_j}{\partial w_{ij}}.
-	\ref{chain2}
+	\label{chain2}
 \end{equation}
 Deriving from \ref{pizza}
 \begin{equation}
