--- a/main.tex
+++ b/main.tex
@@ -274,7 +274,7 @@ Which gives our final Backpropagation formula:
 
 
 \section{Biological plausibility of neural networks}
-While a majority of papers on neural network in present-day literature are about supervised learning, a minority exists referring to unsupervised learning.
+While a majority of papers on neural network in present-day literature are about supervised learning, a minority of articles exist referring to unsupervised learning.
 In a 2019 paper by Dimitry Krotov and John J.
 Hopfield is illustrated a unsupervised algorithm for training a neural network in an unsupervised fashion inspired by biological neural networks.
 As we know, biology has inspired neural networks since the first steps in this direction of machine learning, and biological neural networks and artificial neural network have structural similarity, that is to say both are formed by layers of neurons greatly connected by synapses.
