--- a/main.tex
+++ b/main.tex
@@ -399,7 +399,7 @@ Note that a tree can ask for the same numerical data to pass or not more than on
 
 \subsubsection{Building decision trees}
 
-So, to classify our data, we need to choose thresholds for the numerical values in the features of our samples, then choose the right order of the question nodes, and then assign a label to each leaf in the tree.
+So, in order to classify our data, we need to choose thresholds for the numerical values in the features of our samples, then choose the right order of the question nodes, and then assign a label to each leaf in the tree.
 Let's see the main concept that allows us to do this:
 the Gini impurity.
 It is an indicator of how good a single feature is at classifying our data.
